@@ -5,6 +5,8 @@
    opening a new file.
  * Added flac to the list of audio extensions. Patch by 
    Tanguy Krotoff <tkrotoff@gmail.com>
+ * Now changing the application stylesheet can be disabled setting
+   ALLOW_CHANGE_STYLESHEET to 0 in config.h
 
 (2008-02-29)
  * Added the Macedonian translation by Marko Doda <mark0d0da@gmail.com>
